# SDL2Proj1

./: CMakeLists.txt  main.cpp  redacted.txt
